--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="description" content="This is JoyJoy Ecommerce">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="christine joy.png" title="image/x-icon">
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/cce2ed1378.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="https://fontawesome.com/icons/paintbrush-fine?s=solid">
+       
         <title>Joy Joy</title>
     </Head>
 
@@ -73,7 +73,7 @@
                     <div class="serv-content">
                         <div class="card">
                             <div class="box">
-                                <i class="fas fa-paint-brush"></i>
+                                <i class="fas fa-paint"></i>
                                 <div class="text">Web Design</div>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, adipisci quod voluptates distinctio nam reiciendis deleniti illo, reprehenderit nisi numquam quae cum! Corporis tempore, consectetur repellat sapiente quisquam sunt veniam.</p>
                             </div>
