--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                              Download
                         </a>
                     <p class="res1">Download Resume</p>
+                    <p class="res1">Download Resume</p>
                     </div>
                 </div>
             </section>
